--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -19,6 +19,14 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="new"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/tv_show_notice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,7 +50,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick='@{()->vmNotice.noticeView(vm.NOTICE_MSG,"12")}'
-            android:text="update"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -52,7 +59,6 @@
             android:id="@+id/btn_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="next"
             app:layout_constraintBottom_toTopOf="@id/btn_update"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
